--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>目录</title>
 </head>
 <body>
-    <!-- 这是注释，不会在网页显示 -->
+    <!-- 这是网站的链接https://huahuajonny.github.io/web-learning/ -->
     <h1>web开发学习网页</h1>
     <p>总结了Web开发中常用的内容，以及我的学习过程 </p>
 
@@ -16,6 +16,7 @@
     <ul>
         <li><a href="day1.html">day1</a></li>
         <li><a href="day2.html">day2</a></li>
+        <li><a href="day3.html">day3</a></li>
     </ul>
 
     <p>持续更新中</p>
