--- a/personal.html
+++ b/personal.html
@@ -17,11 +17,11 @@
     <blockquote>
         <em>
             <strong>
-                “Don't beat yourself up,when you're down,beat yourself up to get up and try again.”
+                “Don't beat yourself up,when you're down,never get up and try again.”
             </strong>
         </em>
     </blockquote>
-    <h1>联系我</h1>
+    <a href="contact"><h1>联系我</h1></a>
     <ul>
         <li>手机：<em>13341825185</em></li>
         <li>微信：<em>Huahua20130805</em></li>
